# m-courtyard

./: .gitignore  BRANDING.md  CHANGELOG.md  CONTRIBUTING.md  README.md  README_zh-CN.md  package.json  推广进度.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
app/: README.md  USAGE.md  eslint.config.js  package.json  pnpm-lock.yaml  vitest.config.ts
app/src/: index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/scripts/: clean_data.py  download_model.py  export_gguf.py  export_ollama.py  extract_text.py  generate_dataset_builtin.py  generate_dataset_lmstudio.py  generate_dataset_ollama.py  i18n.py
app/src-tauri/scripts/locales/: en.json  zh-CN.json
app/src-tauri/src/: lib.rs
app/src-tauri/src/commands/: config.rs  dataset.rs  environment.rs  export.rs  files.rs  inference.rs  mod.rs  storage.rs  training.rs
app/src-tauri/src/python/: executor.rs
app/src/components/: ModelSelector.tsx  NotificationPanel.tsx  StepProgress.tsx
app/src/components/layout/: AppLayout.tsx  Sidebar.tsx
app/src/components/ui/: tooltip.tsx
app/src/i18n/: index.ts
app/src/i18n/locales/en/: common.json  (+5 more)
app/src/lib/: utils.test.ts
app/src/pages/Dashboard/: DashboardPage.tsx
app/src/pages/DataPrep/: DataPrepPage.tsx
app/src/pages/Export/: ExportPage.tsx
app/src/pages/Settings/: SettingsPage.tsx
app/src/pages/Testing/: TestingPage.tsx
app/src/pages/Training/: TrainingPage.tsx
app/src/services/: environment.ts  training.ts
app/src/stores/: exportGgufStore.ts  exportStore.ts  generationStore.ts  testingStore.ts
docs/: 测试文档.md
(+6 files in other folders)
